# dualquat-reg

./: CMakeLists.txt  README  README.md  compare_pcl_demo.cpp  global_register.cpp  global_register.h  main.cpp  makenrun.sh  mesh.cpp  usage.txt
data/: view3.fine.txt  view3.ply  view4.fine.txt  view4.ply  view5.fine.txt  view7.fine.txt  view8.ply
dualquat/: demo.txt  diffusion.hpp  dual_quaternions.h  main.cpp  math3d.h  mesh.cpp  mesh.h
dualquat/data/: view1.fine.txt  view1.ply  view2.fine.txt  view2.ply  view5.ply  view6.fine.txt  view6.ply  view7.ply  view8.fine.txt  view9.fine.txt  view9.ply
